-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.1
-
None
-
Fedora 39 with KDE Plasma Wayland.
-
-
99078778c (12.0), 060d4faed (12.0)
- Launch application with "Run in terminal" enabled
- Double click in terminal output
This does not reproduce every time, but often enough.
Stack trace:
#0 __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44 #1 0x00007f2df84ae8a3 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78 #2 0x00007f2df845c8ee in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26 #3 0x00007f2df84448ff in __GI_abort () at abort.c:79 #4 0x00007f2df86d9580 in std::__glibcxx_assert_fail (file=file@entry=0x7f2dd7f306f8 "/usr/include/c++/13/optional", line=line@entry=477, function=function@entry=0x7f2dd7f30d08 "constexpr _Tp& std::_Optional_base_impl<_Tp, _Dp>::_M_get() [with _Tp = TerminalSolution::TerminalView::Selection; _Dp = std::_Optional_base<TerminalSolution::TerminalView::Selection, true, true>]", condition=condition@entry=0x7f2dd7f306e2 "this->_M_is_engaged()") at ../../../../../libstdc++-v3/src/c++11/assert_fail.cc:41 #5 0x00007f2dd7f216af in std::_Optional_base_impl<TerminalSolution::TerminalView::Selection, std::_Optional_base<TerminalSolution::TerminalView::Selection, true, true> >::_M_get (this=<optimized out>) at /usr/include/c++/13/optional:475 #6 std::_Optional_base_impl<TerminalSolution::TerminalView::Selection, std::_Optional_base<TerminalSolution::TerminalView::Selection, true, true> >::_M_get (this=<optimized out>) at /usr/include/c++/13/optional:475 #7 std::optional<TerminalSolution::TerminalView::Selection>::operator-> (this=<optimized out>) at /usr/include/c++/13/optional:966 #8 TerminalSolution::TerminalView::mousePressEvent (this=0x564c4e677d70, event=0x7ffcc17ca3a0) at /usr/src/debug/qt-creator-12.0.1-1.fc39.x86_64/src/libs/solutions/terminal/terminalview.cpp:1077 #9 0x00007f2dfa01e478 in QWidget::event (this=this@entry=0x564c4e677d70, event=event@entry=0x7ffcc17ca3a0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidget.cpp:9368 #10 0x00007f2dfa0b9e6a in QFrame::event (this=0x564c4e677d70, e=0x7ffcc17ca3a0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/widgets/qframe.cpp:515 #11 0x00007f2df8ba092e in QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x564c4e900ff0, event=event@entry=0x7ffcc17ca3a0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1250 #12 0x00007f2df9fc2b28 in QApplicationPrivate::notify_helper (this=this@entry=0x564c498b4270, receiver=receiver@entry=0x564c4e900ff0, e=e@entry=0x7ffcc17ca3a0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:3284 #13 0x00007f2df9fcca6b in QApplication::notify (this=<optimized out>, receiver=0x564c4e900ff0, e=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:2777 #14 0x00007f2df8ba0ba8 in QCoreApplication::notifyInternal2 (receiver=0x564c4e900ff0, event=0x7ffcc17ca3a0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1118 #15 0x00007f2df8ba0dbd in QCoreApplication::sendSpontaneousEvent (receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1550 #16 0x00007f2df9fcb253 in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x564c4e900ff0, event=event@entry=0x7ffcc17ca3a0, alienWidget=<optimized out>, nativeWidget=0x564c49c69130, buttonDown=buttonDown@entry=0x7f2dfa5b26e0 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:2361 #17 0x00007f2dfa032006 in QWidgetWindow::handleMouseEvent (this=0x564c4ba72160, event=event@entry=0x7ffcc17ca660) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidgetwindow.cpp:627 #18 0x00007f2dfa034f30 in QWidgetWindow::event (this=0x564c4ba72160, event=0x7ffcc17ca660) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidgetwindow.cpp:241 #19 0x00007f2df9fc2b38 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x564c4ba72160, e=0x7ffcc17ca660) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:3290 #20 0x00007f2df8ba0ba8 in QCoreApplication::notifyInternal2 (receiver=0x564c4ba72160, event=0x7ffcc17ca660) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1118 #21 0x00007f2df8ba0dbd in QCoreApplication::sendSpontaneousEvent (receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1550 #22 0x00007f2df9609127 in QGuiApplicationPrivate::processMouseEvent (e=0x7f2dd8004010) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/kernel/qguiapplication.cpp:2315 #23 0x00007f2df9667c1c in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/kernel/qwindowsysteminterface.cpp:1109 #24 0x00007f2df9b3ff14 in userEventSourceDispatch (source=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/platform/unix/qeventdispatcher_glib.cpp:38 #25 0x00007f2df7d11e5c in g_main_dispatch (context=0x7f2de0000ef0) at ../glib/gmain.c:3476 #26 g_main_context_dispatch_unlocked (context=0x7f2de0000ef0) at ../glib/gmain.c:4284 #27 0x00007f2df7d6cf18 in g_main_context_iterate_unlocked.isra.0 (context=context@entry=0x7f2de0000ef0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4349 #28 0x00007f2df7d0fad3 in g_main_context_iteration (context=0x7f2de0000ef0, may_block=1) at ../glib/gmain.c:4414 #29 0x00007f2df8e4096f in QEventDispatcherGlib::processEvents (this=0x564c498bc9e0, flags=...) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:393 #30 0x00007f2df8bad9bb in QEventLoop::exec (this=this@entry=0x7ffcc17caa90, flags=..., flags@entry=...) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qflags.h:34 #31 0x00007f2df8ba97bd in QCoreApplication::exec () at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qflags.h:74 #32 0x00007f2df95f8b4d in QGuiApplication::exec () at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/kernel/qguiapplication.cpp:1921 #33 0x00007f2df9fc2aa9 in QApplication::exec () at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:2569 #34 0x0000564c47b7336e in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt-creator-12.0.1-1.fc39.x86_64/src/app/main.cpp:882 (gdb) #0 __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44 #1 0x00007f2df84ae8a3 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78 #2 0x00007f2df845c8ee in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26 #3 0x00007f2df84448ff in __GI_abort () at abort.c:79 #4 0x00007f2df86d9580 in std::__glibcxx_assert_fail (file=file@entry=0x7f2dd7f306f8 "/usr/include/c++/13/optional", line=line@entry=477, function=function@entry=0x7f2dd7f30d08 "constexpr _Tp& std::_Optional_base_impl<_Tp, _Dp>::_M_get() [with _Tp = TerminalSolution::TerminalView::Selection; _Dp = std::_Optional_base<TerminalSolution::TerminalView::Selection, true, true>]", condition=condition@entry=0x7f2dd7f306e2 "this->_M_is_engaged()") at ../../../../../libstdc++-v3/src/c++11/assert_fail.cc:41 #5 0x00007f2dd7f216af in std::_Optional_base_impl<TerminalSolution::TerminalView::Selection, std::_Optional_base<TerminalSolution::TerminalView::Selection, true, true> >::_M_get (this=<optimized out>) at /usr/include/c++/13/optional:475 #6 std::_Optional_base_impl<TerminalSolution::TerminalView::Selection, std::_Optional_base<TerminalSolution::TerminalView::Selection, true, true> >::_M_get (this=<optimized out>) at /usr/include/c++/13/optional:475 #7 std::optional<TerminalSolution::TerminalView::Selection>::operator-> (this=<optimized out>) at /usr/include/c++/13/optional:966 #8 TerminalSolution::TerminalView::mousePressEvent (this=0x564c4e677d70, event=0x7ffcc17ca3a0) at /usr/src/debug/qt-creator-12.0.1-1.fc39.x86_64/src/libs/solutions/terminal/terminalview.cpp:1077 #9 0x00007f2dfa01e478 in QWidget::event (this=this@entry=0x564c4e677d70, event=event@entry=0x7ffcc17ca3a0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidget.cpp:9368 #10 0x00007f2dfa0b9e6a in QFrame::event (this=0x564c4e677d70, e=0x7ffcc17ca3a0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/widgets/qframe.cpp:515 #11 0x00007f2df8ba092e in QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x564c4e900ff0, event=event@entry=0x7ffcc17ca3a0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1250 #12 0x00007f2df9fc2b28 in QApplicationPrivate::notify_helper (this=this@entry=0x564c498b4270, receiver=receiver@entry=0x564c4e900ff0, e=e@entry=0x7ffcc17ca3a0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:3284 #13 0x00007f2df9fcca6b in QApplication::notify (this=<optimized out>, receiver=0x564c4e900ff0, e=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:2777 #14 0x00007f2df8ba0ba8 in QCoreApplication::notifyInternal2 (receiver=0x564c4e900ff0, event=0x7ffcc17ca3a0) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1118 #15 0x00007f2df8ba0dbd in QCoreApplication::sendSpontaneousEvent (receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1550 #16 0x00007f2df9fcb253 in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x564c4e900ff0, event=event@entry=0x7ffcc17ca3a0, alienWidget=<optimized out>, nativeWidget=0x564c49c69130, buttonDown=buttonDown@entry=0x7f2dfa5b26e0 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:2361 #17 0x00007f2dfa032006 in QWidgetWindow::handleMouseEvent (this=0x564c4ba72160, event=event@entry=0x7ffcc17ca660) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidgetwindow.cpp:627 #18 0x00007f2dfa034f30 in QWidgetWindow::event (this=0x564c4ba72160, event=0x7ffcc17ca660) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qwidgetwindow.cpp:241 #19 0x00007f2df9fc2b38 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x564c4ba72160, e=0x7ffcc17ca660) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:3290 #20 0x00007f2df8ba0ba8 in QCoreApplication::notifyInternal2 (receiver=0x564c4ba72160, event=0x7ffcc17ca660) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1118 #21 0x00007f2df8ba0dbd in QCoreApplication::sendSpontaneousEvent (receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qcoreapplication.cpp:1550 #22 0x00007f2df9609127 in QGuiApplicationPrivate::processMouseEvent (e=0x7f2dd8004010) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/kernel/qguiapplication.cpp:2315 #23 0x00007f2df9667c1c in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/kernel/qwindowsysteminterface.cpp:1109 #24 0x00007f2df9b3ff14 in userEventSourceDispatch (source=<optimized out>) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/platform/unix/qeventdispatcher_glib.cpp:38 #25 0x00007f2df7d11e5c in g_main_dispatch (context=0x7f2de0000ef0) at ../glib/gmain.c:3476 #26 g_main_context_dispatch_unlocked (context=0x7f2de0000ef0) at ../glib/gmain.c:4284 #27 0x00007f2df7d6cf18 in g_main_context_iterate_unlocked.isra.0 (context=context@entry=0x7f2de0000ef0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4349 #28 0x00007f2df7d0fad3 in g_main_context_iteration (context=0x7f2de0000ef0, may_block=1) at ../glib/gmain.c:4414 #29 0x00007f2df8e4096f in QEventDispatcherGlib::processEvents (this=0x564c498bc9e0, flags=...) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:393 #30 0x00007f2df8bad9bb in QEventLoop::exec (this=this@entry=0x7ffcc17caa90, flags=..., flags@entry=...) at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qflags.h:34 #31 0x00007f2df8ba97bd in QCoreApplication::exec () at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/corelib/global/qflags.h:74 #32 0x00007f2df95f8b4d in QGuiApplication::exec () at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/gui/kernel/qguiapplication.cpp:1921 #33 0x00007f2df9fc2aa9 in QApplication::exec () at /usr/src/debug/qt6-qtbase-6.6.0-6.fc39.x86_64/src/widgets/kernel/qapplication.cpp:2569 #34 0x0000564c47b7336e in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt-creator-12.0.1-1.fc39.x86_64/src/app/main.cpp:882
For Gerrit Dashboard: QTCREATORBUG-30144 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
528963,3 | Terminal: Fix selection warning | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
528964,3 | Terminal: Fix nullopt access | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |