Terminal: Fix selection warning

When quickly selection text via double-clicking and moving the mouse to the left
it is possible that a selection is created where the start == end.
This was incorrectly reported as a warning.

Task-number: QTCREATORBUG-30144
Change-Id: I37b22f4ee725e5085ce0090c123ccfd9980b8a59
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>