src/libs/solutions/terminal/terminalview.cpp
@@ -386,10 +386,13 @@ QString TerminalView::textFromSelection() const
     if (!d->m_selection)
         return {};
 
+    if (d->m_selection->start == d->m_selection->end)
+        return {};
+
     CellIterator it = d->m_surface->iteratorAt(d->m_selection->start);
     CellIterator end = d->m_surface->iteratorAt(d->m_selection->end);
 
-    if (it.position() >= end.position()) {
+    if (it.position() > end.position()) {
         qCWarning(selectionLog) << "Invalid selection: start >= end";
         return {};
     }
